<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestingDB</string>
    <string name="action_settings">Settings</string>
    <string name="tombol_tambah">Tambah Data</string>
    <string name="v_nim">NIM</string>
    <string name="v_nama">Nama</string>
    <string name="v_jurusan">Jurusan</string>
    <string name="v_alamat">Alamat</string>
    <string name="i_nim">Masukkan NIM</string>
    <string name="i_nama">Masukan Nama</string>
    <string name="i_jurusan">Masukan Jurusan</string>
    <string name="i_alamat">Masukan Alamat</string>
	<string name="t_tambah">Tambah</string>
	<string name="t_batal">Batal</string>
</resources>
