<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="21dp"
        android:text="@string/v_alamat" />

    <Button
        android:id="@+id/btn_batal"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_tambah"
        android:layout_toRightOf="@+id/btn_tambah"
        android:text="@string/t_batal" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/v_nim" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:text="@string/v_nama" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="17dp"
        android:text="@string/v_jurusan" />

    <EditText
        android:id="@+id/input_nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:hint="@string/i_nim" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/input_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_nim"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:hint="@string/i_nama" />

    <EditText
        android:id="@+id/input_jurusan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/input_nama"
        android:layout_alignRight="@+id/input_nama"
        android:ems="10"
        android:hint="@string/i_jurusan" />

    <EditText
        android:id="@+id/input_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:hint="@string/i_alamat" />

    <Button
        android:id="@+id/btn_tambah"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_alamat"
        android:layout_below="@+id/input_alamat"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="26dp"
        android:text="@string/t_tambah" />

</RelativeLayout>
